CYTOSCAPE-12556 #comment Checking if the session file still exists (downloaded files are deleted) to decide whether to use 'save' or 'save-as'.